Update close button redirect to index.html

--- a/success.html
+++ b/success.html
@@ -80,7 +80,7 @@
       <button
         class="close-btn"
         type="button"
-        onclick="window.location.href='/index-mod.html'">
+        onclick="window.location.href='/index.html'">
         CLOSE WINDOW
       </button>
     </div>
